# helpscout-mcp-server

./: .coverage  QUICK_START.md  README.md  pyproject.toml
src/helpscout_mcp/: __init__.py  client.py  config.py  server.py
tasks/: plan.md  project-design-doc.md
tests/: conftest.py
tests/unit/: test_client.py  test_config.py  test_project_structure.py  test_server.py
