[project]
name = "helpscout-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for HelpScout API access"
readme = "README.md"
authors = [
    { name = "Brandon Redmond", email = "brandon@gethealthie.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "httpx",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
